[package]
name = "ugc-bundle-bulk-purchaser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
terminal_hyperlink = "0.1.0"
clap = { version = "4.4.1", features = ["derive"] }
select = "0.6.0"
async-recursion = "1.0.4"
